<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BackupAccountsChooseActivity"
    tools:showIn="@layout/activity_backup_accounts_choose"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/backup_accounts_head_text"
        android:id="@+id/backup_accounts_text_h1"
        android:layout_alignParentTop="true"
        android:textColor="@color/h1_color"
        android:textSize="@dimen/h1_size"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:descendantFocusability="beforeDescendants"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_backup_text"
        android:id="@+id/backupContinueButton"
        android:background="@drawable/rounded_corners"
        android:clickable="true"
        android:textSize="@dimen/h1_size"
        android:padding="15dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseFolderText"
        android:id="@+id/backupFolderChooseButton"
        android:background="@drawable/rounded_corners"
        android:padding="10dp"
        android:textSize="@dimen/h3_size"
        android:clickable="true"
        android:layout_above="@+id/backupContinueButton"
        android:layout_alignRight="@+id/backupMagicField"
        android:layout_alignEnd="@+id/backupMagicField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseFilesText"
        android:id="@+id/backupFilesChooseButton"
        android:background="@drawable/rounded_corners"
        android:padding="10dp"
        android:textSize="@dimen/h3_size"
        android:clickable="true"
        android:layout_above="@+id/backupContinueButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:ems="10"
        android:id="@+id/backupMagicField"
        android:background="@drawable/rounded_corners"
        android:padding="10dp"
        android:textSize="20dp"
        android:password="false"
        android:editable="false"
        android:hint="@string/passwordHintText"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:scrollIndicators="right"
        android:layout_below="@+id/backup_accounts_text_h1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <ToggleButton
    android:id="@+id/GD_button"
    android:drawableLeft="@drawable/gd_logo"
    android:textOn="@string/GD_button_on"
    android:textOff="@string/GD_button_off"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:gravity="left|center_vertical"
    android:paddingLeft="10dp"
    android:textSize="@dimen/h2_size"
    android:layout_below="@+id/backup_accounts_text_h1"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:checked="false" />

<ToggleButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/YD_button"
    android:textOff="@string/YD_button_off"
    android:textOn="@string/YD_button_on"
    android:drawableLeft="@drawable/yd_logo"
    android:clickable="true"
    android:background="@drawable/rounded_corners"
    android:gravity="left|center_vertical"
    android:paddingLeft="10dp"
    android:textSize="@dimen/h2_size"
    android:layout_below="@+id/GD_button"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />

<ToggleButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/DB_button"
    android:textOff="@string/DB_button_off"
    android:textOn="@string/DB_button_on"
    android:drawableLeft="@drawable/db_logo"
    android:clickable="true"
    android:background="@drawable/rounded_corners"
    android:gravity="left|center_vertical"
    android:paddingLeft="10dp"
    android:textSize="@dimen/h2_size"
    android:layout_below="@+id/YD_button"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/selectedFilesList"
        android:layout_below="@+id/backupMagicField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/backupFolderChooseButton"
        android:layout_alignRight="@+id/backupMagicField"
        android:layout_alignEnd="@+id/backupMagicField"
        android:editable="false"
        android:textIsSelectable="true"
        android:focusable="false"
        android:focusableInTouchMode="false" />
</RelativeLayout>
